<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.openbox.support</groupId>
	<artifactId>crypto</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>   
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.0.4</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.8.1</version> <!-- latest plugins break ehcache testing -->
				<configuration>
					<forkMode>once</forkMode>
					<childDelegation>false</childDelegation>
					<argLine>-Djava.awt.headless=true -XX:MaxPermSize=256m -Xmx512m </argLine>
					<includes>
						<include>**/*Test.class</include>
					</includes>
				</configuration> 
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.madgag</groupId>
			<artifactId>scprov-jdk15</artifactId> 
			<version>1.46.99.3-UNOFFICIAL-ROBERTO-RELEASE</version>
		</dependency>
	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<targetJdk>1.6</targetJdk>
	</properties>
</project>